--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -1,5 +1,5 @@
 body {
- 	background: /images/nasa.jpg;
+ 	background: /images/nasa ;
  	background-repeat: no-repeat;
     background-attachment:fixed;
     background-size: cover;
